--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <div class="description">These languages are the backbone of every website, defining structure, content, and presentation. </div>
 <div class="name"> 
-<img src="assets/images/image-avatar-ezgif.com-webp-to-png-converter.png" alt="Greg-photo" width="150" height="150">Greg Hooper </div>
+<img src="assets/images/image-avatar-ezgif.com-webp-to-png-converter.png" alt="Greg-photo" >Greg Hooper </div>
 </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
